--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,27 +5,26 @@ jobs:
     strategy:
       matrix:
         go:
-          - 1.13
-          - 1.14
+          - 1.18.5
+          - 1.19
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ matrix.go }}
+        id: go
 
-    - name: Set up Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: ${{ matrix.go }}
-      id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: setup reids
+        uses: shogo82148/actions-setup-redis@v1
+        with:
+          redis-version: "6.x"
+          auto-start: "false"
 
-    - name: setup reids
-      uses: shogo82148/actions-setup-redis@v1
-      with:
-        redis-version: '6.x'
-        auto-start: "false"
-
-    - name: Build & Test
-      run: |
-        go test -v .
+      - name: Build & Test
+        run: |
+          go test -v .
